--- a/v1/index.html
+++ b/v1/index.html
@@ -1,29 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>jsQR Demo</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>jsQR Demo</h1>
+    <head>
+        <meta charset="UTF-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+        />
+        <title>QR Code Scanner</title>
+    </head>
 
-  <video id="video" autoplay playsinline></video>
-  <canvas id="canvas" hidden></canvas>
+    <body style="margin: 0">
+        <button id="start-scanning">Start scanning</button>
+        <p id="result"></p>
+        <script type="module">
+            import "https://cdn.jsdelivr.net/npm/scanbot-web-sdk@7.0.0/bundle/ScanbotSDK.ui2.min.js";
+            const sdk = await ScanbotSDK.initialize({
+                enginePath:
+                    "https://cdn.jsdelivr.net/npm/scanbot-web-sdk@7.0.0/bundle/bin/barcode-scanner/",
+            });
+            document
+                .getElementById("start-scanning")
+                .addEventListener("click", async () => {
 
-  <div>
-    <button id="startBtn">Start Camera</button>
-    <button id="stopBtn" disabled>Stop Camera</button>
-    <button id="restartBtn" disabled>Restart Camera</button>
-  </div>
+                    const config =
+                        new ScanbotSDK.UI.Config.BarcodeScannerScreenConfiguration();
+                        config.scannerConfiguration.barcodeFormats = ["QR_CODE"];
+                        config.viewFinder.visible = false;
+                        config.useCase.arOverlay.visible = true;
+                        config.useCase.arOverlay.automaticSelectionEnabled = false;
+                        config.useCase.confirmationSheetEnabled = true;
 
-  <div>
-    <input type="file" id="fileInput" accept="image/*">
-  </div>
-
-  <div id="result">Scan a QR code...</div>
-
-  <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
-  <script src="app.js"></script>
-</body>
+                    const scanResult = await ScanbotSDK.UI.createBarcodeScanner(config);
+                    if (scanResult?.items?.length > 0) {
+                        document.getElementById("result").innerText =
+                            `Barcode type: ${scanResult.items[0].barcode.format} \n` +
+                            `Barcode content: "${scanResult.items[0].barcode.text}" \n`;
+                    } else {
+                        document.getElementById("result").innerText = "Scanning aborted by the user";
+                    }
+                });
+        </script>
+    </body>
 </html>
